welcome.lessons.welcome.array.array123.Array123.scala.error
array123:2: error: ';' expected but '=' found.
   int T: int=nums.length
             ^