welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
   int T: int=nums.length
  for (i <- 0 to T){
    if (nums(i)==1 && nums(i+1)==2 && nums(i+2)==3){
      return true
    }
    
  }
  return false
}